syntax = "proto2";

package logtail;

service LogTail {
    rpc GetFiles(RequestFile) returns (Files) {}
    rpc GetFileContent(FileName) returns (Content) {}
}

message RequestFile {}

message Files {
    repeated string name = 1;
}

message FileName {
    required string name = 1;
}

message Content {
    repeated string line = 1;
}

